# QCTutorial

./: .gitignore  NOTEBOOK_WRITING_PLAN_EN.md  README.md  copilot-instructions.md  pyproject.toml  todo.md
.github/: copilot-instructions.md
notebooks/: 00_first_qubit.ipynb  01_superposition.ipynb  02_interference.ipynb  02_rotations_interference.ipynb  03_two_qubits_cnot.ipynb  04_entanglement.ipynb  04_teleportation.ipynb  05_deutsch_algorithm.ipynb  06_teleportation.ipynb
notebooks/legacy/: 01_superposition.ipynb  03_entanglement.ipynb
utils/: __init__.py  monarch_config.py  plotting.py
utils/legacy/: __init__.py  plotting.py
