[tool.poetry]
name = "qctutorial"
version = "0.1.0"
description = "Lightning-fast introduction to quantum computing fundamentals with beautiful visualizations"
authors = ["ramdam17 <remy.ramadour.labs@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.0.0"
qiskit-aer = "^0.13.0"
qiskit-ibm-runtime = "^0.20.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
numpy = "^1.26.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.0"
pylatexenc = "^2.10"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
